-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 8.0.0
-
9eb3cb1ac (master)
Steps to reproduce
- Open the "Native Android Service in Same Process" example (https://doc.qt.io/qt-5/qtandroidextras-services-servicesameprocess-example.html )
- Inspect the project's AndroidManifest.xml file with a text editor
- Use the Qt Creator GUI to open AndroidManifest.xml, make a simple change to the Package Name (for example "org.qtproject.example.qtandroidservice" -> "org.qtproject.example.qtandroidservices"), and save it
- Repeat Step #2
Result
At Step #2, the manifest contains this:
<service android:name=".QtAndroidService"> <!-- Background running --> <meta-data android:name="android.app.background_running" android:value="true"/> <!-- Background running --> </service>
At Step #4, the above has been corrupted to this:
<service android:name=".QtAndroidService"> <!-- Background running --> <meta-data android:name="android.app.background_running" android:value="true"/> <!-- Background running --> <meta-data android:name="android.app.lib_name" android:value="-- %%INSERT_APP_LIB_NAME%% --"/> </service>
A more complex example
Data can even be deleted. The Firebase service declaration (https://firebase.google.com/docs/cloud-messaging/android/client ) gets turned from this...
<service
android:name=".java.MyFirebaseMessagingService"
android:exported="false">
<intent-filter>
<action android:name="com.google.firebase.MESSAGING_EVENT" />
</intent-filter>
</service>
...to this:
<service android:name=".java.MyFirebaseMessagingService"> <meta-data android:name="android.app.lib_name" android:value="-- %%INSERT_APP_LIB_NAME%% --"/> </service>
- resulted in
-
QTCREATORBUG-27119 Android: Growing deficiencies of Qt Creator's UI-based AndroidManifest.xml editor
-
- Reported
-
| For Gerrit Dashboard: QTCREATORBUG-28024 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 448350,2 | Android: Remove Service management from AndroidManifestEditorWidget | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |