Android: Remove Service management from AndroidManifestEditorWidget

Any manipulation of an AndroidManifest.xml document in the
AndroidManifestEditor would heavily modify present <service/> entries.
Even if the Service widget is not used. Furthermore, the service
handling code would filter out any present white space.

A visual XML editor must keep any present information (ideally also
formatting and white spaces) intact and should only apply the minimal
amount of change when saving. This can be challenging if the loaded
AndroidManifest.xml has before been hand-edited. Implementing and
maintaining a visual XML editor requires much effort. It has to be
considered if such effort is reasonable for a specialist feature like
creating Android services, especially since the "Manifest elements
reference" is very well documented on developer.android.com and the Qt-
specific parts in the Qt docs.

This change removes the service management from the
AndroidManifestEditorWidget. A good, text-based XML editor that
considers the AndroidManifest schema is a valid substitute.

Fixes: QTCREATORBUG-28024
Change-Id: I73ce5b5c548c5bee6fb7fe2d50d83e0ca3937208
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>